--- a/styles.css
+++ b/styles.css
@@ -15,12 +15,18 @@ input {
     margin-bottom: 10px;
 }
 
-button {
+#searchButton {
     width: 100%;
     padding: 5px;
     margin-bottom: 10px;
 }
-
+#audioPlayer{
+    cursor: pointer;
+    color: blue;
+    font-size: 12px;
+    margin-top: 10px;  
+    display: none;
+}
 #result {
     margin-top: 10px;
 }
